@@ -5,6 +5,7 @@ ____________________________________________
 
 * Fix hearts not displayed in the savegame menu.
 * Fix rupee island accessible without flippers (#67).
+* Fix running not inflicting twice damage (#77).
 * Allow to enter the lost and found office from outside (#7).
 * Dungeon 1: improve throwing the iron ball.
 * Water house: fix pool limits.
